--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -10,7 +10,7 @@ description: A mobile app for voting on different HVL Expo exhibitions.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,9 +22,11 @@ dependencies:
   firebase_auth: ^0.8.1+3
   firebase_messaging: ^4.0.0+1
   firebase_dynamic_links: ^0.2.0+2
+  firebase_analytics: ^2.0.2+1
 
   # other packages
   rxdart: ^0.21.0
+  meta: ^1.1.6
 
   # scripts dependencies
   args: ^1.5.1
@@ -35,6 +37,8 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  mockito: ^4.0.0
+  firebase_core: ^0.3.1
   flutter_test:
     sdk: flutter
 
