:see_no_evil: Updated gitignore [skip travis]
Updated gitignore to include firebase secrets

--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,9 @@ build/
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
-
+# firebase sevrets
+google-services.json
+GoogleService-Info.plist
 # Logs
 logs
 *.log
