--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
         - yes | sdkmanager "build-tools;28.0.3"
       before_script:
         - cd mobile
-        - openssl aes-256-cbc -K $encrypted_83ca096eb3cb_key -iv $encrypted_83ca096eb3cb_iv -in secrets.tar.enc -out secrets.tar -d
+        - penssl aes-256-cbc -K $encrypted_8d3f39b55532_key -iv $encrypted_8d3f39b55532_iv -in secrets.tar.enc -out secrets.tar -d
         - tar xvf secrets.tar
         - if [  ! -d "flutter" ] ; then git clone https://github.com/flutter/flutter.git -b beta; fi;
         - export PATH=`pwd`/flutter/bin:`pwd`/flutter/bin/cache/dart-sdk/bin:$PATH
