--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -17,16 +17,18 @@ dependencies:
     sdk: flutter
 
   # firebase dependencies
-  cloud_firestore: ^0.9.5+1
   firebase_ml_vision: ^0.6.0+1
   firebase_auth: ^0.8.1+3
-  firebase_messaging: ^4.0.0+1
-  firebase_dynamic_links: ^0.2.0+2
   firebase_analytics: ^2.0.2+1
 
   # other packages
-  rxdart: ^0.21.0
   meta: ^1.1.6
+  equatable: ^0.2.0
+  
+  # redux packages
+  redux: ^3.0.0
+  flutter_redux: ^0.5.3
+  redux_epics: ^0.10.4
 
   # scripts dependencies
   args: ^1.5.1
