:heavy_plus_sign: Added dependencies

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   # other packages
   meta: ^1.1.6
   equatable: ^0.2.0
+  http: ^0.12.0+1
+  date_format: ^1.0.6
+
+  # widgets
+  liquid_pull_to_refresh: ^1.1.0
+  side_header_list_view: ^0.0.4
   
   # redux packages
   redux: ^3.0.0
@@ -60,6 +66,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/hvl_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
