--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   # widgets
   liquid_pull_to_refresh: ^1.1.0
   side_header_list_view: ^0.0.4
+
+  # qr related
+  fast_qr_reader_view:
+    git: git://github.com/facundomedica/fast_qr_reader_view.git
   
   # redux packages
   redux: ^3.0.0
@@ -68,6 +72,20 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/images/hvl_logo.png
+
+  fonts:
+    - family: Akademie
+      fonts:
+        - asset: assets/fonts/Akademie-Std-Light.otf
+          weight: 300 #300l/400r/500m/600b
+        - asset: assets/fonts/Akademie-Std.otf
+          weight: 400
+        - asset: assets/fonts/Akademie-Std-Medium.otf
+          weight: 500
+        - asset: assets/fonts/Akademie-Std-Bold.otf
+          weight: 600
+        - asset: assets/fonts/Akademie-Std-Black.otf
+          weight: 700
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
