--- a/mobile/ios/Runner/Info.plist
+++ b/mobile/ios/Runner/Info.plist
@@ -43,5 +43,7 @@
 	<false/>
 	<key>NSCameraUsageDescription</key>
 	<string>Camera is used to scan QR codes.</string>
+	<key>NSFaceIDUsageDescription</key>
+<string>FaceID is used to authenticate users</string>
 </dict>
 </plist>
