:sparkles: Moved React app to its own folder

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,10 @@
 {
-	"name": "hvl-expo",
+	"name": "hvl-expo-backend",
 	"version": "0.1.0",
 	"private": true,
-	"dependencies": {
-		"react": "^16.8.3",
-		"react-dom": "^16.8.3",
-		"react-router-dom": "^4.3.1"
-	},
-	"devDependencies": {
-		"react-scripts": "^2.1.5"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject",
-		"deploy": "react-scripts build && now"
-	},
+	"dependencies": {},
+	"devDependencies": {},
+	"scripts": {},
 	"browserslist": [
 		">0.2%",
 		"not dead",
