:heavy_plus_sign: Added various packages

--- a/backend/now.json
+++ b/backend/now.json
@@ -1,5 +1,6 @@
 {
 	"name": "hvl-expo",
 	"version": 1,
-	"alias": "expo.sondregjellestad.space"
+	"alias": "expo.sondregjellestad.space",
+	"env": { "NODE_ENV": "production" }
 }
