:heavy_plus_sign: Added dependency

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   liquid_pull_to_refresh: ^1.1.0
   side_header_list_view: ^0.0.4
   auto_size_text: ^1.0.0
+  cached_network_image: ^0.7.0
 
   # qr related
   fast_qr_reader_view:
