--- a/backend/package.json
+++ b/backend/package.json
@@ -26,11 +26,14 @@
 		"now": "^14.0.3",
 		"nyc": "^13.3.0",
 		"rimraf": "^2.6.3",
-		"nodemon":"^1.18.10"
+		"nodemon": "^1.18.10",
+		"concurrently": "^4.1.0"
 	},
 	"scripts": {
 		"start": "node index.js",
 		"server": "nodemon",
+		"server:frontend": "npm run start --prefix ../frontend",
+		"dev": "concurrently \"npm run server\" \"npm run server:frontend\"",
 		"test": "eslint",
 		"lint": "eslint",
 		"coverage": "nyc --reporter=lcov --reporter=text-lcov npm test",
