--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ matrix:
       os: linux
       dist: xenial
       language: android
+      branches:
+        only:
+            - master
+            - mobile
       env:
         global:
           - ANDROID_API_LEVEL=28
@@ -54,6 +58,10 @@ matrix:
     - name: "Flutter iOS"
       os: osx
       language: generic
+      branches:
+        only:
+            - master
+            - mobile
       env:
         global:
           - IS_COMMIT=["$TRAVIS_PULL_REQUEST" = "false"]
@@ -86,6 +94,10 @@ matrix:
     # Node tests
     -  name: "Node Backend"
        language: node_js
+       branches:
+        only:
+            - master
+            - backend-development
        node_js:
          - "stable"
        cache:
@@ -108,6 +120,10 @@ matrix:
        # React tests
     -  name: "React App"
        language: node_js
+       branches:
+        only:
+            - master
+            - frontend-development
        node_js:
          - "stable"
        cache:
