--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,10 @@ matrix:
 
     # Flutter Android build
     - name: "Flutter Android"
+      if: branch IN (master, mobile-development)
       os: linux
       dist: xenial
       language: android
-      branches:
-        only:
-            - master
-            - mobile
       env:
         global:
           - ANDROID_API_LEVEL=28
@@ -58,10 +55,7 @@ matrix:
     - name: "Flutter iOS"
       os: osx
       language: generic
-      branches:
-        only:
-            - master
-            - mobile
+      if: branch IN (master, mobile-development)
       env:
         global:
           - IS_COMMIT=["$TRAVIS_PULL_REQUEST" = "false"]
@@ -94,10 +88,7 @@ matrix:
     # Node tests
     -  name: "Node Backend"
        language: node_js
-       branches:
-        only:
-            - master
-            - backend-development
+       if: branch IN (master, backend-development)
        node_js:
          - "stable"
        cache:
@@ -120,10 +111,7 @@ matrix:
        # React tests
     -  name: "React App"
        language: node_js
-       branches:
-        only:
-            - master
-            - frontend-development
+       if: branch IN (master, frontend-development)
        node_js:
          - "stable"
        cache:
