--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ matrix:
 
     # Flutter Android build
     - name: "Flutter Android"
+      if: branch IN (master, mobile-development)
       os: linux
       dist: xenial
       language: android
@@ -54,6 +55,7 @@ matrix:
     - name: "Flutter iOS"
       os: osx
       language: generic
+      if: branch IN (master, mobile-development)
       env:
         global:
           - IS_COMMIT=["$TRAVIS_PULL_REQUEST" = "false"]
@@ -86,6 +88,7 @@ matrix:
     # Node tests
     -  name: "Node Backend"
        language: node_js
+       if: branch IN (master, backend-development)
        node_js:
          - "stable"
        cache:
@@ -108,6 +111,7 @@ matrix:
        # React tests
     -  name: "React App"
        language: node_js
+       if: branch IN (master, frontend-development)
        node_js:
          - "stable"
        cache:
