--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   cached_network_image: ^0.7.0
 
   # qr related
-  fast_qr_reader_view:
-    git: git://github.com/facundomedica/fast_qr_reader_view.git
+  qr_mobile_vision: ^0.2.2
+  qr: ^1.0.1
   
   # redux packages
   redux: ^3.0.0
