--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,12 @@
 	},
 	"private": true,
 	"dependencies": {
-		"dotenv": "^6.2.0",
+		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
-		"firebase": "^5.8.5",
-		"helmet": "^3.15.1",
+		"firebase": "^5.9.0",
+		"helmet": "^3.16.0",
 		"jsonwebtoken": "^8.5.0",
-		"mongoose": "^5.4.17",
+		"mongoose": "^5.4.19",
 		"morgan": "^1.9.1",
 		"parse-error": "^0.2.0",
 		"passport": "^0.4.0",
@@ -23,19 +23,20 @@
 		"pg": "^7.8.2"
 	},
 	"devDependencies": {
+		"ava": "^1.3.1",
+		"concurrently": "^4.1.0",
 		"eslint": "^5.15.1",
-		"now": "^14.0.3",
-		"nyc": "^13.3.0",
-		"rimraf": "^2.6.3",
 		"nodemon": "^1.18.10",
-		"concurrently": "^4.1.0"
+		"now": "^14.1.0",
+		"nyc": "^13.3.0",
+		"rimraf": "^2.6.3"
 	},
 	"scripts": {
 		"start": "node index.js",
 		"server": "nodemon",
 		"server:frontend": "npm run start --prefix ../frontend",
 		"dev": "concurrently \"npm run server\" \"npm run server:frontend\"",
-		"test": "eslint",
+		"test": "ava",
 		"lint": "eslint",
 		"coverage": "nyc --reporter=lcov --reporter=text-lcov npm test",
 		"build:react": "rimraf build && cd ../frontend && npm run yank",
