--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
 		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
 		"firebase": "^5.9.0",
+		"firebase-admin": "^7.1.1",
 		"helmet": "^3.16.0",
 		"jsonwebtoken": "^8.5.0",
 		"mongoose": "^5.4.19",
