--- a/now.json
+++ b/now.json
@@ -2,5 +2,9 @@
 	"name": "hvl-expo",
 	"version": 1,
 	"alias": "expo.sondregjellestad.space",
-	"env": { "NODE_ENV": "production" }
+	"env": { 
+		"NODE_ENV": "production",
+		"POSTGRES_URL": "@postgres_url",
+		"EXPO_SERVICE_ACCOUNT_KEY": "@expo-service-account-key"
+	}
 }
