--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"private": true,
 	"dependencies": {
 		"atob": "^2.1.2",
+		"cors": "^2.8.5",
 		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
 		"firebase": "^5.9.2",
